--- a/message/pom.xml
+++ b/message/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
             <artifactId>movement-model</artifactId>
+			<classifier>xmlgregoriancalendar</classifier>
             <scope>provided</scope>
         </dependency>
 
