--- a/service/pom.xml
+++ b/service/pom.xml
@@ -32,12 +32,14 @@
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
             <artifactId>movement-model</artifactId>
+			<classifier>xmlgregoriancalendar</classifier>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.asset</groupId>
             <artifactId>asset-model</artifactId>
+			<classifier>date</classifier>
             <scope>provided</scope>
         </dependency>
 
