updated artifact id and name for activity deploy pom

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>uvms-commons</artifactId>
         </dependency>
