--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
         <dependencies>
 
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.12</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-parent</artifactId>
                 <version>1.1.10</version>
