--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,8 @@
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
                 <artifactId>uvms-commons</artifactId>
                 <version>${uvms.commons.version}</version>
-            </dependency>
+				<optional>true</optional>
+			</dependency>
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
@@ -410,6 +411,12 @@
 							<groupId>org.hibernate</groupId>
 							<artifactId>hibernate-validator</artifactId>
 						</dependency>
+						<dependency>
+							<groupId>eu.europa.ec.fisheries.uvms</groupId>
+							<artifactId>uvms-commons</artifactId>
+							<version>${uvms.commons.version}</version>
+							<classifier>weblogic</classifier>
+						</dependency>				
 					
 					</dependencies>
 				
