--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -174,6 +174,18 @@
 								</jarModule>						
 							</modules>
 						</configuration>
+						<executions>
+							<execution>
+								<id>weblogic-class</id>
+								<phase>package</phase>
+								<goals>
+									<goal>ear</goal>
+								</goals>
+								<configuration>
+									<classifier>weblogic</classifier>
+								</configuration>
+							</execution>
+						</executions>							
 					</plugin>
 					
 				
