[UNIONVMS-1831] updated sources

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
                 <artifactId>usm4uvms</artifactId>
                 <version>${usm4uvms.version}</version>
+				<optional>true</optional>				
             </dependency>
             
             <dependency>
@@ -417,6 +418,13 @@
 							<version>${uvms.commons.version}</version>
 							<classifier>weblogic</classifier>
 						</dependency>				
+						<dependency>
+							<groupId>eu.europa.ec.fisheries.uvms</groupId>
+							<artifactId>usm4uvms</artifactId>
+							<version>${usm4uvms.version}</version>
+							<classifier>weblogic</classifier>			
+						</dependency>
+					
 					
 					</dependencies>
 				
