[UNIONVMS-1831] updated sources

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -158,7 +158,24 @@
             </build>
         </profile>
 		<profile>
-            <id>weblogic</id>
+            <id>weblogic-weblogic</id>
+            <build>
+                <plugins>		
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.4</version>
+						<configuration>
+							<generateApplicationXml>false</generateApplicationXml>						
+							<packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>	
+						</configuration>
+					</plugin>
+					
+	            </plugins>							
+            </build>				
+		</profile>
+		<profile>
+            <id>weblogic-activemq</id>
             <build>
                 <plugins>		
 					<plugin>
