--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -98,9 +98,30 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.4</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
+                <executions>
+                    <execution>
+                        <id>wildfly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>war</goal>
+                        </goals>
+                        <configuration>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>weblogic</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>war</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>weblogic</classifier>
+                            <failOnMissingWebXml>false</failOnMissingWebXml>
+                            <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.pitest</groupId>
@@ -157,7 +178,7 @@
                 </plugins>
             </build>
         </profile>
-		<profile>
+		<!--<profile>
             <id>weblogic-weblogic</id>
             <build>
                 <plugins>		
@@ -166,6 +187,7 @@
 						<artifactId>maven-war-plugin</artifactId>
 						<version>2.4</version>
 						<configuration>
+                            <classifier>weblogic-weblogic</classifier>
 							<generateApplicationXml>false</generateApplicationXml>						
 							<packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>	
 						</configuration>
@@ -183,16 +205,14 @@
 						<artifactId>maven-war-plugin</artifactId>
 						<version>2.4</version>
 						<configuration>
+                            <classifier>weblogic-activemq</classifier>
 							<generateApplicationXml>false</generateApplicationXml>						
 							<packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>	
 						</configuration>
 					</plugin>
-					
 	            </plugins>							
             </build>				
-		</profile>
-		 
-		
+		</profile>-->
     </profiles>
 
 </project>
