--- a/message/pom.xml
+++ b/message/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons</artifactId>
+            <artifactId>uvms-commons-wildfly</artifactId>
         </dependency>
 
         <dependency>
