--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         
         	<dependency>
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
-                <artifactId>usm4uvms</artifactId>
+                <artifactId>usm4uvms-wildfly</artifactId>
                 <version>${usm4uvms.version}</version>
 				<optional>true</optional>				
             </dependency>
@@ -98,7 +98,7 @@
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
-                <artifactId>uvms-commons</artifactId>
+                <artifactId>uvms-commons-wildfly</artifactId>
                 <version>${uvms.commons.version}</version>
 				<optional>true</optional>
 			</dependency>
