* update movement model

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.1.2</logback.core.version>
         <asset.module.version>3.0.0</asset.module.version>
-        <movement.model.version>3.0.0-SNAPSHOT</movement.model.version>
+        <movement.model.version>3.0.4</movement.model.version>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
