--- a/deploy-weblogic/pom.xml
+++ b/deploy-weblogic/pom.xml
@@ -42,12 +42,12 @@
         </dependency>
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>usm4uvms-weblogic</artifactId>
+            <artifactId>usm4uvms</artifactId>
             <version>${usm4uvms.version}</version>
         </dependency>
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons-weblogic</artifactId>
+            <artifactId>uvms-commons</artifactId>
             <version>${uvms.commons.version}</version>
         </dependency>
         <dependency>
@@ -105,7 +105,7 @@
                         </ejbModule>
                         <jarModule>
                             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-                            <artifactId>usm4uvms-weblogic</artifactId>
+                            <artifactId>usm4uvms</artifactId>
                             <bundleDir>/</bundleDir>
                         </jarModule>
                         <jarModule>
