--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -20,12 +20,12 @@
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons-wildfly</artifactId>
+            <artifactId>uvms-commons</artifactId>
         </dependency>
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>usm4uvms-wildfly</artifactId>
+            <artifactId>usm4uvms</artifactId>
             <scope>provided</scope>
         </dependency>
         
