--- a/service/pom.xml
+++ b/service/pom.xml
@@ -26,13 +26,13 @@
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>usm4uvms-wildfly</artifactId>
+            <artifactId>usm4uvms</artifactId>
             <version>2.0.17-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons-wildfly</artifactId>
+            <artifactId>uvms-commons</artifactId>
         </dependency>
 
         <dependency>
