--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
 
         <sonar.exclusions>src/main/webapp/apidocs/**/*</sonar.exclusions>
-
+        <additionalparam>-Xdoclint:none</additionalparam>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
         <spatial.model>1.0.4-SNAPSHOT</spatial.model>
@@ -42,7 +42,7 @@
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
         <javaee.version>7.0</javaee.version>
         <mapstruct.version>1.0.0.Final</mapstruct.version>
-        <uvms-wildfly-weblogic-convertor>1.7.2</uvms-wildfly-weblogic-convertor>
+        <uvms-wildfly-weblogic-convertor>1.7.4-SNAPSHOT</uvms-wildfly-weblogic-convertor>
         <database.dialect>oracle</database.dialect>
 
         <scm.connection>scm:git:https://github.com/UnionVMS/UVMS-SpatialModule-APP.git</scm.connection>
