* tryout sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -30,7 +30,7 @@ sonar.java.test.binaries
 sonar.sourceEncoding=UTF-8
 
 # Retrieve code coverage data from the Cobertura report
-sonar.flex.cobertura.reportPath=report/coverage.xml
+sonar.flex.cobertura.reportPath=**/target/site/cobertura/coverage.xml
 
 # java version used by source files:
 sonar.java.source=1.7
