--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,18 @@
         <mapstruct.version>1.0.0.Final</mapstruct.version>
         <uvms-wildfly-weblogic-convertor>1.7.4-SNAPSHOT</uvms-wildfly-weblogic-convertor>
         <database.dialect>oracle</database.dialect>
-
         <scm.connection>scm:git:https://github.com/UnionVMS/UVMS-SpatialModule-APP.git</scm.connection>
+
+        <!-- sonar properties -->
+        <sonar.exclusions>**/generated-sources/**</sonar.exclusions>
+        <sonar.sources>sonar.sources=src</sonar.sources>
+        <sonar.java.binaries>target/classes</sonar.java.binaries>
+        <sonar.java.libraries>target/dependency/*.jar</sonar.java.libraries>
+        <sonar.language>flex</sonar.language>
+        <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+        <sonar.flex.cobertura.reportPath>**/target/site/cobertura/coverage.xml</sonar.flex.cobertura.reportPath>
+        <sonar.java.source>1.7</sonar.java.source>
+
     </properties>
 
     <dependencyManagement>
@@ -61,13 +71,6 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.12</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-parent</artifactId>
-                <version>1.1.10</version>
-                <type>pom</type>
             </dependency>
 
             <dependency>
@@ -332,16 +335,6 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.0.1</version>
             </plugin>
-            <!--<plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <check>true</check>
-                    <format>xml</format>
-                    <aggregate>true</aggregate>
-                </configuration>
-            </plugin>-->
 			 <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
@@ -356,14 +349,6 @@
                 <configuration>
                     <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.pitest</groupId>
-                <artifactId>pitest-maven</artifactId>
-                <version>1.1.10</version>
-                <configuration>
-                    <failWhenNoMutations>false</failWhenNoMutations>
                 </configuration>
             </plugin>
         </plugins>
