exclude javascript files

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <scm.connection>scm:git:https://github.com/UnionVMS/UVMS-SpatialModule-APP.git</scm.connection>
 
         <!-- sonar properties -->
-        <sonar.exclusions>**/generated-sources/**</sonar.exclusions>
+        <sonar.exclusions>**/generated-sources/**,**/*.js</sonar.exclusions>
         <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
         <sonar.flex.cobertura.reportPath>**/target/site/cobertura/coverage.xml</sonar.flex.cobertura.reportPath>
         <sonar.java.source>1.7</sonar.java.source>
