--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>0.5.6-SNAPSHOT</version>
+        <version>0.5.6</version>
     </parent>
 
     <dependencies>
