--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <jts.version>1.13</jts.version>
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <asset.module.version>3.0.0-SNAPSHOT</asset.module.version>
-        <movement.model.version>3.0.0-SNAPSHOT</movement.model.version>
+        <asset.module.version>3.0.0</asset.module.version>
+        <movement.model.version>3.0.4</movement.model.version>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
@@ -32,10 +32,10 @@
         <hibernate.version>4.3.5.Final</hibernate.version>
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
         <geotools.version>14-M1</geotools.version>
-        <uvms.commons.version>2.0.14-SNAPSHOT</uvms.commons.version>
-        <uvms.test.version>0.0.4-SNAPSHOT</uvms.test.version>
+        <uvms.commons.version>2.0.14</uvms.commons.version>
+        <uvms.test.version>0.0.7</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>3.0.0-SNAPSHOT</usm4uvms.version>
+        <usm4uvms.version>3.0.0</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.release.plugin.version>2.5.2</maven.release.plugin.version>
