--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>0.5.6-SNAPSHOT</version>
+        <version>0.5.6.presweden2</version>
     </parent> 
 
     <build>
@@ -179,7 +179,7 @@
 									<classifier>weblogic</classifier>		   
 									
 									<bundleDir>/</bundleDir>					
-								</jarModule >						
+								</jarModule>						
 							   <jarModule>
 									<groupId>eu.europa.ec.mare.usm</groupId>
 									<artifactId>jwt-handler-impl</artifactId>
