--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
         <jts.version>1.13</jts.version>
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.1.2</logback.core.version>
-        <asset.model.version>3.0.0</asset.model.version>
-        <movement.model.version>3.0.4</movement.model.version>
+        <asset.model.version>4.0.0</asset.model.version>
+        <movement.model.version>4.0.0</movement.model.version>
         <application.name>${project.parent.artifactId}</application.name>
         <application.version>${project.parent.version}</application.version>
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
@@ -36,7 +36,7 @@
         <hibernate.version>4.3.5.Final</hibernate.version>
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
         <geotools.version>14.4</geotools.version>
-        <uvms.commons.version>3.0.0-SNAPSHOT</uvms.commons.version>
+        <uvms.commons.version>3.0.0</uvms.commons.version>
         <uvms.test.version>0.0.8</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
         <usm4uvms.version>4.0.0</usm4uvms.version>
@@ -136,14 +136,12 @@
                 <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
                 <artifactId>movement-model</artifactId>
                 <version>${movement.model.version}</version>
-                <classifier>xmlgregoriancalendar</classifier>
             </dependency>
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms.asset</groupId>
                 <artifactId>asset-model</artifactId>
                 <version>${asset.model.version}</version>
-				<classifier>date</classifier>
             </dependency>
             
 	        <dependency>
