uvms-commons update

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -33,6 +33,22 @@
             <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
             <artifactId>uvms-commons-message</artifactId>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-rest</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-geometry</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+		<dependency>
+		    <groupId>org.apache.xmlgraphics</groupId>
+		    <artifactId>batik-transcoder</artifactId>
+		    <version>1.8</version>
+		</dependency>
+
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
