--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <properties>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
-        <docker.dev.version>3.13.0</docker.dev.version>
+        <docker.dev.version>3.16.0</docker.dev.version>
         <spatial.model>1.0.5</spatial.model>
         <reporting.model>1.0.3</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,7 +33,7 @@
         <application.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}.log</application.logfile>
         <application.error.logfile>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-error.log</application.error.logfile>
         <application.logfile.boot>/app/logs/${project.parent.artifactId}/${project.parent.artifactId}-boot.log</application.logfile.boot>
-        <hibernate.version>4.3.5.Final</hibernate.version>
+        <hibernate.version>4.3.11.Final</hibernate.version>
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
         <geotools.version>14.4</geotools.version>
         <uvms.commons.version>3.0.3</uvms.commons.version>
@@ -199,8 +199,14 @@
             	<groupId>org.jboss.resteasy</groupId>
 			    <artifactId>resteasy-jaxb-provider</artifactId>
 			  	<version>3.0.11.Final</version>
+			  	<exclusions>
+			  		<exclusion>
+					    <groupId>com.sun.xml.bind</groupId>
+					    <artifactId>jaxb-impl</artifactId>			  		
+			  		</exclusion>
+			  	</exclusions>
 			</dependency>
-
+			
 			<dependency>
 			    <groupId>org.jboss.resteasy</groupId>
 			    <artifactId>jaxrs-api</artifactId>
@@ -225,6 +231,16 @@
                 <version>${javaee.version}</version>
                 <scope>provided</scope>
             </dependency>
+	        <dependency>
+	            <groupId>ch.qos.logback</groupId>
+	            <artifactId>logback-classic</artifactId>
+	            <version>${logback.core.version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>ch.qos.logback</groupId>
+	            <artifactId>logback-core</artifactId>
+	            <version>${logback.core.version}</version>
+	        </dependency>
 
         </dependencies>
 
