pom cleanup, remove jts.

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -64,6 +64,12 @@
             <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
             <artifactId>uvms-commons-geometry</artifactId>
             <version>${uvms.commons.version}</version>
+            <exclusions>
+				<exclusion>
+					<groupId>com.vividsolutions</groupId>
+					<artifactId>jts</artifactId>
+				</exclusion>
+			</exclusions>			            
         </dependency>        
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
